--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,8 @@
 	<classpathentry kind="lib" path="lib/commons-validator-1.4.0.jar" sourcepath="lib/commons-validator-1.4.0-src.zip"/>
 	<classpathentry kind="lib" path="lib/args4j-2.0.21.jar" sourcepath="lib/args4j-2.0.21-src.zip"/>
 	<classpathentry kind="lib" path="lib/javacsv-2.1.jar" sourcepath="lib/javacsv-2.1-src.zip"/>
+	<classpathentry kind="lib" path="lib/fixedformat4j-1.3.4.jar" sourcepath="lib/fixedformat4j-1.3.4-src.zip"/>
+	<classpathentry kind="lib" path="lib/spring-core-3.2.4.RELEASE.jar" sourcepath="lib/spring-core-3.2.4.RELEASE-src.zip"/>
+	<classpathentry kind="lib" path="lib/commons-logging-api-1.1.3.jar" sourcepath="lib/commons-logging-1.1.3-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
