--- a/build.xml
+++ b/build.xml
@@ -66,7 +66,7 @@
 		<echo file="${package.dir}/run-ibancalc.sh" append="false">#!/bin/sh
 SCRIPT=$$(readlink -f $$0)
 SCRIPTDIR=$$(dirname $$SCRIPT)
-java -jar $$SCRIPTDIR/ibancalc.jar
+java -jar $$SCRIPTDIR/ibancalc.jar $$*
 		</echo>
 		<chmod file="${package.dir}/run-ibancalc.sh" perm="a+rx"/>
 
